--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,56 @@ html {
     box-sizing: border-box;
 }
 
+.splachsceen {
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(249 248 248);
+    overflow: hidden !important;
+}
+
+.lds-hourglass {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;    
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid #485da7;
+    border-color: #485da7 transparent #485da7 transparent;
+    animation: lds-hourglass 1.2s infinite;
+  }
+  @keyframes lds-hourglass {
+    0% {
+      transform: rotate(0);
+      animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+      transform: rotate(900deg);
+      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+      transform: rotate(1800deg);
+    }
+  }
+
+
+/* ////////////////////////////////////// */
 .main-head {
     height: 700px;
     background-image: url(./../assets/Masktop.png);
@@ -62,7 +112,8 @@ html {
 
 .section-header .btnbtnUSHERING {
     cursor: pointer;
-
+    padding: 9px 20px;
+    font-size: 17px;
 }
 
 @media (max-width: 992px) {
@@ -156,11 +207,12 @@ html {
 .section-aboutapp .btn-Join {
     color: white;
     width: fit-content;
-    padding: 1px 14px;
     background: rgb(68, 93, 167);
     font-weight: bold;
     cursor: pointer;
     background: linear-gradient(90deg, rgba(68, 93, 167, 1) 57%, rgba(255, 255, 255, 0.48503151260504207) 100%);
+    padding: 4px 20px;
+    font-size: 17px;
 }
 
 /* ////////////////////////////// */
@@ -185,7 +237,7 @@ html {
 }
 
 .influ-body .c-main {
-    width: 450px;
+    width: 330px;
     background-color: #dff6fc;
     padding: 14px 15px;
     border-radius: 20px;
@@ -202,6 +254,8 @@ html {
 
 .influ-body .btn-login {
     width: fit-content;
+    padding: 4px 20px;
+    font-size: 17px;
 }
 
 /* ///////////////////////////////// */
@@ -242,12 +296,13 @@ html {
 .footbody .btn-Join {
     color: white;
     width: fit-content;
-    padding: 1px 14px;
     background: rgb(68, 93, 167);
     font-weight: bold;
     cursor: pointer;
     background: linear-gradient(90deg, rgba(68, 93, 167, 1) 57%, rgba(255, 255, 255, 0.48503151260504207) 100%);
     margin-bottom: 5px;
+    padding: 4px 20px;
+    font-size: 17px;
 }
 
 .footbody .down {
