--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,8 @@ html,body{
 
 .section-header {
     color: white;
-    bottom: 12%;
     max-width: 100%;
-
+    transform: translateY(12%);
 }
 
 .section-header .btnbtnUSHERING {
@@ -226,40 +225,28 @@ html,body{
     height: 780px;
     background-image: url("../assets/Maskdown.png");
     background-size: cover;
-    position: relative;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footbody {
-    position: absolute;
-    max-width: 100%;
-    top: 30%;
-    width: 100vw;
+    gap: 30px;
+    justify-content: center;
+}
+
+@media (min-width: 992px) and (max-width: 1399.98px) {
+    .foot-bg {
+        height: 615px;
+    }
 }
 
 @media (max-width: 992px) {
-    .footbody {
-        top: 11%;
-        height: 600px;
-    }
-
     .footbody .first-col {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-    }
-}
-
-@media (max-width: 576px) {
-    .footbody {
-        top: 12%;
-    }
-}
-
-@media (min-width: 992px) {
-    .foot-bg {
-        height: 600px;
     }
 }
 
